Fix Page AJAX request

--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -78,7 +78,7 @@
             var settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "http://localhost/nozomi/page/post",
+                "url": "/nozomi/page/post",
                 "method": "POST",
                 "headers": {
                     "content-type": "application/x-www-form-urlencoded",
