Fix typo in page.html

--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -91,7 +91,7 @@
                     {% if name %}
                     "original": "{{ name }}",
                     {% endif %}
-                    "content": $('#wysiwyg').trumbowyg('html');
+                    "content": $('#wysiwyg').trumbowyg('html')
                     "template": $('#template').val()
                 }
             }
