--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -3,7 +3,7 @@
       {% include 'header.html' %}
 </head>
 <body>
-<form class="form-signin" action="/nozomi/login" method="post">
+<form class="form-signin" action="{{ nozomiurl }}/login" method="post">
       <img class="mb-4" style="display: block; margin: 0 auto;" src="/nozomi/assets/img/icon.png" alt="" width="75" height="75">
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
       <label for="inputEmail" class="sr-only">Email address</label>
