--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -5,14 +5,14 @@
 <link rel="stylesheet" href="/nozomi/assets/css/bootstrap.min.css">
 <link rel="stylesheet" href="/nozomi/assets/css/nozomi.css">
 <script src="/nozomi/assets/js/bootstrap.min.js"></script>
-<link rel="apple-touch-icon" sizes="180x180" href="/nozomi/assets/favicons/apple-touch-icon.png?v=XBJqWW7nbx">
-<link rel="icon" type="image/png" sizes="32x32" href="/nozomi/assets/favicons/favicon-32x32.png?v=XBJqWW7nbx">
-<link rel="icon" type="image/png" sizes="16x16" href="/nozomi/assets/favicons/favicon-16x16.png?v=XBJqWW7nbx">
-<link rel="manifest" href="/nozomi/assets/favicons/site.webmanifest?v=XBJqWW7nbx">
-<link rel="mask-icon" href="/nozomi/assets/favicons/safari-pinned-tab.svg?v=XBJqWW7nbx" color="#18be2b">
-<link rel="shortcut icon" href="/nozomi/assets/favicons/favicon.ico?v=XBJqWW7nbx">
+<link rel="apple-touch-icon" sizes="180x180" href="/nozomi/assets/favicons/apple-touch-icon.png?v=wishstarredyellow">
+<link rel="icon" type="image/png" sizes="32x32" href="/nozomi/assets/favicons/favicon-32x32.png?v=wishstarredyellow">
+<link rel="icon" type="image/png" sizes="16x16" href="/nozomi/assets/favicons/favicon-16x16.png?v=wishstarredyellow">
+<link rel="icon" type="image/ico" sizes="16x16" href="/nozomi/assets/favicons/favicon-16x16.ico?v=wishstarredyellow">
+<link rel="manifest" href="/nozomi/assets/favicons/site.webmanifest?v=wishstarredyellow">
+<link rel="mask-icon" href="/nozomi/assets/favicons/safari-pinned-tab.svg?v=wishstarredyellow" color="#5bbad5">
+<link rel="shortcut icon" href="/nozomi/assets/favicons/favicon.ico?v=wishstarredyellow">
 <meta name="apple-mobile-web-app-title" content="Nozomi">
 <meta name="application-name" content="Nozomi">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="msapplication-config" content="/nozomi/assets/favicons/browserconfig.xml?v=XBJqWW7nbx">
+<meta name="msapplication-TileColor" content="#ffffff">
 <meta name="theme-color" content="#ffffff">
