--- a/src/templates/setup.html
+++ b/src/templates/setup.html
@@ -10,6 +10,7 @@
 <div class="container">
 <form method="POST" action="/nozomi/setup">
   <div class="form-group row">
+    <small id="sqlhelp" class="form-text text-muted">Visit <a href="https://nozomi.afroraydude.com/#/install/database">here</a> for help on database setup.</small>
     <label for="sqlh" class="col-3 col-form-label">SQL Host</label> 
     <div class="col-9">
       <input id="sqlh" name="sqlh" type="text" class="form-control here" required="required">
