--- a/src/templates/file.html
+++ b/src/templates/file.html
@@ -12,22 +12,25 @@
     <link rel="stylesheet" href="/nozomi/assets/js/ui/trumbowyg.min.css">
 </head>
 <body>
-
 <div class="page">
     {% include 'nav.html' %}
-    <div class="container">
+    <div class="container-fluid">
+        <div class="row">
+            {% include 'sidebar.html' %}
+            <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
+                <div class="container">
         <form method="post" action="/nozomi/file/post" enctype="multipart/form-data">
             <!-- upload of a single file -->
             <p>
                 <label>Add file (single): </label><br/>
-                <input type="file" name="example1"/>
+                <input type="file" class="form-control-file" name="example1"/>
             </p>
 
-            <p>
-                <input type="submit"/>
-            </p>
-        </form>
+            <button type="submit" class="btn btn-primary">Upload</button>
+        </form></div>
+            </main></div>
     </div>
 </div>
+{% include 'footer.html' %}
 </body>
 </html>
