--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -3,6 +3,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <link rel="stylesheet" href="/nozomi/assets/css/bootstrap.min.css">
+<link rel="stylesheet" href="/nozomi/assets/css/mdb.min.css">
 <link rel="stylesheet" href="/nozomi/assets/css/nozomi.css">
 <script src="/nozomi/assets/js/bootstrap.min.js"></script>
 <link rel="apple-touch-icon" sizes="180x180" href="/nozomi/assets/favicons/apple-touch-icon.png?v=wishstarredyellow">
