--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -1,20 +1,15 @@
 <html>
 <head>
     {% include 'header.html' %}
-    <!-- Main Quill library -->
-    <script src="//cdn.quilljs.com/1.3.6/quill.js"></script>
-    <script src="//cdn.quilljs.com/1.3.6/quill.min.js"></script>
-
-    <!-- Theme included stylesheets -->
-    <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.3.0/highlight.min.js"></script>
-    <link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
     <link rel="stylesheet" href="/nozomi/assets/js/ui/trumbowyg.min.css">
 </head>
 <body>
-
 <div class="page">
     {% include 'nav.html' %}
+    <div class="container-fluid">
+        <div class="row">
+            {% include 'sidebar.html' %}
+            <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
     <div class="container" id="msg" style="font-size:largest;">
         <!-- you can set whatever style you want on this -->
         Loading, please wait...
@@ -69,6 +64,7 @@
             <button class="btn btn-primary" id="submit">Submit Page</button>
         </div>
     </div>
+            </main></div>
 </div>
 <script type="text/javascript">
     $(document).ready(function() {
@@ -103,5 +99,6 @@
     });
 </script>
 </div>
+{% include 'footer.html' %}
 </body>
 </html>
