--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-      {% include 'header.html' %}
+      {% include 'partials/header.twig' %}
 </head>
 <body>
 <form class="form-signin" action="{{ nozomiurl }}/login" method="post">
