--- a/src/templates/pages.html
+++ b/src/templates/pages.html
@@ -12,7 +12,7 @@
             {% include 'partials/sidebar.twig' %}
             <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
                 <div class="container">
-                    <h1>Settings</h1>
+                    {% include 'partials/page-view.twig' %}
                 </div>
             </main>
         </div>
