--- a/src/templates/setup.html
+++ b/src/templates/setup.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-{% include 'header.html' %}
+{% include 'partials/header.twig' %}
 </head>
 <div class="page">
 <div style="height: 150px">
@@ -54,6 +54,6 @@
 </form>
 </div>
 </div>
-{% include 'footer.html' %}
+{% include 'partials/footer.twig' %}
 </body>
 </html>
