--- a/src/css/nozomi.css
+++ b/src/css/nozomi.css
@@ -124,3 +124,34 @@ h1, h2, h3, h4, h5, h6 {
 .sidebar .nav-link {
     border-radius: 0;
 }
+
+.menu-bar {
+    -webkit-box-shadow: 0px 10px 0px 0px rgba(0,0,0,0.11);
+    -moz-box-shadow: 0px 10px 0px 0px rgba(0,0,0,0.11);
+    box-shadow: 0px 10px 0px 0px rgba(0,0,0,0.11);
+}
+
+.centereverything {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.center-1 {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.center-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: visible;
+}
+
+.center-2 img {
+    max-width:99%;
+    max-height:99%;
+}
