--- a/src/templates/file.html
+++ b/src/templates/file.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    {% include 'header.html' %}
+    {% include 'partials/header.twig' %}
     <!-- Main Quill library -->
     <script src="//cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="//cdn.quilljs.com/1.3.6/quill.min.js"></script>
@@ -16,7 +16,7 @@
     {% include 'nav.html' %}
     <div class="container-fluid">
         <div class="row">
-            {% include 'sidebar.html' %}
+            {% include 'partials/sidebar.twig' %}
             <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
                 <div class="container">
         <form method="post" action="/nozomi/file/post" enctype="multipart/form-data">
@@ -31,6 +31,6 @@
             </main></div>
     </div>
 </div>
-{% include 'footer.html' %}
+{% include 'partials/footer.twig' %}
 </body>
 </html>
