--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light mb-4 menu-bar">
+<nav class="navbar navbar-expand-md fixed-top navbar-light bg-light mb-4 menu-bar">
   <div class="container-fluid">
   <a class="navbar-brand" href="#"><img src="/nozomi/assets/img/icon-left-font.svg" style="height: 30px; transform: translate(0px, -5px);"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
