--- a/src/templates/settings.html
+++ b/src/templates/settings.html
@@ -12,7 +12,12 @@
             {% include 'partials/sidebar.twig' %}
             <main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
                 <div class="container">
-                    <h1>Settings</h1>
+                    <div class="row">
+                        <h1>Settings</h1>
+                    </div>
+                    <div class="row">
+                        {// TODO: Place settings here}
+                    </div>
                 </div>
             </main>
         </div>
