--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer bg-light">
     <div class="container footer-internal">
-        <p class="text-muted">&copy; 2018 <a href="https://afroraydude.com">afroraydude</a>. Project Nozomi v1-alpha.</p>
+        <p class="text-muted">&copy; 2019 <a href="https://github.com/JetpackDevStudios">Jetpack Studios</a>. Project Nozomi v1-alpha.</p>
     </div>
 </footer>
